fix overflowing on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body {
     background: #ffffff;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    overflow-x: hidden;
 }
 
 ::selection {
